<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="105dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lets_play"
            android:textSize="50dp"
            android:textColor="#000000"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:minHeight="10dp">
        <Button
            android:id="@+id/btn_circle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:background="@drawable/circle"
            android:contentDescription="up" />
        </LinearLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_margin="7dp">
        <Button
            android:id="@+id/btn_square"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_weight="1"
            android:background="@drawable/square"
            android:contentDescription="up" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp">
            <Button
                android:id="@+id/btn_oval"
                android:layout_width="match_parent"

                android:padding="12dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/oval"
                android:contentDescription="up" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_rectangle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxWidth="50dp"
                android:padding="12dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:contentDescription="up"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_rectangle_input"
            android:layout_width="0dp"
            android:padding="12dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rectangle"
            android:background="@drawable/rectangle_figure"/>

        <Button
            android:id="@+id/btn_circle_input"
            android:layout_width="0dp"
            android:padding="12dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/circle"
            />

        <Button
            android:id="@+id/btn_oval_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/oval"
            android:background="@drawable/oval_figure"/>

        <Button
            android:id="@+id/btn_square_input"
            android:layout_width="0dp"
            android:padding="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/square"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"/>
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>