<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeaWorldLevel2"
    android:background="@drawable/seaworldfix">

    <Button
        android:id="@+id/button_fish"
        android:layout_width="140dp"
        android:layout_height="121dp"
        android:tag="@string/fish"
        android:background="@drawable/clownfish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_crab"
        android:layout_width="128dp"
        android:layout_height="120dp"
        android:tag="@string/crab"
        android:background="@drawable/crab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_whale"
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:background="@drawable/whale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tag="@string/whale"
        app:layout_constraintVertical_bias="0.572"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_answer_lobster"
        android:layout_width="131dp"
        android:layout_height="126dp"
        android:background="@drawable/lobster"
        android:backgroundTint="@color/black"
        android:text="@string/lobster"
        android:textColor="@color/white"
        android:tag="@string/lobster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_lobster"
        android:layout_width="125dp"
        android:layout_height="131dp"
        android:tag="@string/lobster"
        android:background="@drawable/lobster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_dolphin"
        android:layout_width="174dp"
        android:layout_height="133dp"
        android:background="@drawable/dolphin"
        android:tag="@string/dolphin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/home"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@drawable/ic_baseline_home_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847" />

    <Button
        android:id="@+id/reset"
        android:layout_width="76dp"
        android:layout_height="56dp"
        android:background="@color/white"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />

    <Button
        android:id="@+id/start"
        android:layout_width="69dp"
        android:layout_height="57dp"
        android:background="@color/white"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <TextView
        android:id="@+id/tap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nerkooneregular"
        android:text="@string/tap_to_start"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score2"
        android:fontFamily="@font/nerkooneregular"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />


</androidx.constraintlayout.widget.ConstraintLayout>